src/ui/snapshots/state/default/pr_selection/scrollable_many_items.snap
---
source: src/ui/state/default/pr_selection.rs
expression: harness.backend()
---
"                                                                                                                        "
" ┌Pull Requests───────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │      PR #     Date         Title                         Author            Work Items             PR Dependenc     ↑ "
" │      1005     2024-01-15   Pull Request #1005: Feature i Developer 5                                               ║ "
" │      1006     2024-01-15   Pull Request #1006: Feature i Developer 6       #5006 (Closed)                          ║ "
" │      1007     2024-01-15   Pull Request #1007: Feature i Developer 7                                               ║ "
" │      1008     2024-01-15   Pull Request #1008: Feature i Developer 8                                               ║ "
" │      1009     2024-01-15   Pull Request #1009: Feature i Developer 9       #5009 (Resolved)                        ║ "
" │      1010     2024-01-15   Pull Request #1010: Feature i Developer 0                                               ║ "
" │      1011     2024-01-15   Pull Request #1011: Feature i Developer 1                                               █ "
" │      1012     2024-01-15   Pull Request #1012: Feature i Developer 2       #5012 (Active)                          █ "
" │      1013     2024-01-15   Pull Request #1013: Feature i Developer 3                                               █ "
" │      1014     2024-01-15   Pull Request #1014: Feature i Developer 4                                               █ "
" │      1015     2024-01-15   Pull Request #1015: Feature i Developer 5       #5015 (New)                             █ "
" │      1016     2024-01-15   Pull Request #1016: Feature i Developer 6                                               █ "
" │      1017     2024-01-15   Pull Request #1017: Feature i Developer 7                                               ║ "
" │      1018     2024-01-15   Pull Request #1018: Feature i Developer 8       #5018 (Closed)                          ║ "
" │      1019     2024-01-15   Pull Request #1019: Feature i Developer 9                                               ║ "
" │  ✓   1020     2024-01-15   Pull Request #1020: Feature i Developer 0                                               ║ "
" │  ✓   1021     2024-01-15   Pull Request #1021: Feature i Developer 1       #5021 (Resolved)                        ║ "
" │  ✓   1022     2024-01-15   Pull Request #1022: Feature i Developer 2                                               ║ "
" │  ✓   1023     2024-01-15   Pull Request #1023: Feature i Developer 3                                               ║ "
" │  ✓   1024     2024-01-15   Pull Request #1024: Feature i Developer 4       #5024 (Active)                          ║ "
" │→ ✓   1025     2024-01-15   Pull Request #1025: Feature i Developer 5                                               ↓ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Work Item Details───────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │                                  No work items associated with this pull request.                                  │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Help | Selected: 6──────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │↑/↓: Navigate PRs | ←/→: Navigate Work Items | /: Search | Space: Toggle | Enter: Confirm | p: Open PR | w: Open    │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                                                        "
