src/ui/snapshots/state/default/pr_selection/search_mode.snap
---
source: src/ui/state/default/pr_selection.rs
expression: harness.backend()
---
"                                                                                "
" ┌Search Status───────────────────────────────────────────────────────────────┐ "
" │Search: PR Title: "login" | Result 1 of 1                                   │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Pull Requests───────────────────────────────────────────────────────────────┐ "
" │      PR #     Date         Title           Author          Work Items      ↑ "
" │→     100      2024-01-10   Fix login bug   Alice Johnson   #1001 (Closed)  █ "
" │      101      2024-01-12   Update user pro Bob Wilson      #1002 (Active)  █ "
" │      102      2024-01-14   Add analytics t Carol Martinez  #1003 (Resolved)█ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            █ "
" │                                                                            ║ "
" │                                                                            ↓ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Work Item (1/1)─────────────────────────────────────────────────────────────┐ "
" │Bug         #1001   Login button not responding                             │ "
" │● Closed          | Iteration: Project\Sprint 4 | Assigned: Alice Johnson   │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌History─────────────────────────────────────────────────────────────────────┐ "
" │No history available                                                        │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Reproduction Steps (use ←/→ to navigate work items)─────────────────────────┐ "
" │1. Navigate to login page                                                   │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Help────────────────────────────────────────────────────────────────────────┐ "
" │↑/↓: Navigate PRs | ←/→: Navigate Work Items | n: Next result | N: Previous │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
